[tool.poetry]
name = "snn_hfo_ieeg"
version = "0.1.0"
description = "HFO detection with a Spiking Neural Network"
authors = ["Karla Burelo <kburel@ini.uzh.ch>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.1"
Brian2 = "^2.4.2"
scipy = "^1.7.0"
seaborn = "^0.11.1"
teili = { git="https://gitlab.com/neuroinf/teili.git", branch="dev" }

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
